--- a/for-cylindrical-batteries.html
+++ b/for-cylindrical-batteries.html
@@ -134,7 +134,7 @@
 
 <li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
@@ -142,17 +142,21 @@
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
+<li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 
 
 
+<li class="nav-item mr-0"><a href="#" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
+</a></li>
 <li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
@@ -176,7 +180,7 @@
 </li>
 <li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
@@ -248,7 +252,7 @@
 <li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
-<a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
+<a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
 <li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
@@ -258,17 +262,20 @@
 </li>
 <!-- Two -->
 <li>
-<a href="for-prismatic-batteries.html" title="For Prismatic Batteries">For Prismatic Batteries</a>
+<a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
+<li><a href="#" title="Laser Welding Machines">Laser Welding Machines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
+<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
-<li><a href="#" title="Welding Machines">Welding Machines</a></li>
 </ul>
 </li>
 
 <!-- Three -->
 
+<li><a href="#" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="#" title="Other Machines">Other Machines</a></li>
 
@@ -299,7 +306,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">FOR CYLINDRICAL BATTERIES</h1>
+<h1 class="title text-white">Cylindrical Batteries Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -309,7 +316,7 @@
 <a title="Homepage" href="lithium-batteries.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">For Cylindrical Batteries</span>
+<span class="text-white">Cylindrical Batteries Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -323,7 +330,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Turnkey Assembly Line for Cylindrical Batteries in India"><img src="img/assembly-line.png" class="card-img-top product-img" alt="Turnkey Assembly Line for Cylindrical Batteries in India" title="Turnkey Assembly Line for Cylindrical Batteries in India"></a>
+        <a href="#" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"><img src="img/assembly-line.png" class="card-img-top product-img" alt="Turnkey Assembly Line Cylindrical Batteries Lines in India" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Turnkey Assembly Line</h5>
@@ -340,7 +347,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Cell Testers for Cylindrical Batteries in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers for Cylindrical Batteries in India" title="Cell Testers for Cylindrical Batteries in India"></a>
+        <a href="#" title="Cell Testers Cylindrical Batteries Lines in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers Cylindrical Batteries Lines in India" title="Cell Testers Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
@@ -357,7 +364,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Sorting Machine for Cylindrical Batteries in India"><img src="img/sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine for Cylindrical Batteries in India" title="Sorting Machine for Cylindrical Batteries in India"></a>
+        <a href="#" title="Sorting Machine Cylindrical Batteries Lines in India"><img src="img/sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine Cylindrical Batteries Lines in India" title="Sorting Machine Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
@@ -378,7 +385,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Welding Machines for Cylindrical Batteries in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines for Cylindrical Batteries in India" title="Welding Machines for Cylindrical Batteries in India"></a>
+        <a href="#" title="Welding Machines Cylindrical Batteries Lines in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines Cylindrical Batteries Lines in India" title="Welding Machines Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Welding Machines</h5>
