--- a/lithium-batteries.html
+++ b/lithium-batteries.html
@@ -135,7 +135,7 @@
 
 <li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
@@ -143,17 +143,21 @@
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
+<li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 
 
 
+<li class="nav-item mr-0"><a href="#" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
+</a></li>
 <li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
@@ -177,7 +181,7 @@
 </li>
 <li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
@@ -249,7 +253,7 @@
 <li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
-<a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
+<a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
 <li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
@@ -259,17 +263,20 @@
 </li>
 <!-- Two -->
 <li>
-<a href="for-prismatic-batteries.html" title="For Prismatic Batteries">For Prismatic Batteries</a>
+<a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
+<li><a href="#" title="Laser Welding Machines">Laser Welding Machines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
+<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
-<li><a href="#" title="Welding Machines">Welding Machines</a></li>
 </ul>
 </li>
 
 <!-- Three -->
 
+<li><a href="#" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="#" title="Other Machines">Other Machines</a></li>
 
@@ -321,15 +328,15 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="For Cylindrical Batteries in India" title="For Cylindrical Batteries in India"></a>
+        <a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="Cylindrical Batteries Lines in India" title="Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">For Cylindrical Batteries</h5>
+            <h5 class="card-title">Cylindrical Batteries Lines</h5>
             <p class="card-text text-muted">High-performance cylindrical batteries for energy storage solutions.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -338,15 +345,15 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="for-prismatic-batteries.html" title="For Prismatic Batteries in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="For Prismatic Batteries in India" title="For Prismatic Batteries in India"></a>
+        <a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="Prismatic Batteries Lines in India" title="Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">For Prismatic Batteries</h5>
+            <h5 class="card-title">Prismatic Batteries Lines</h5>
             <p class="card-text text-muted">Reliable prismatic batteries for EV and industrial applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
