--- a/for-prismatic-batteries.html
+++ b/for-prismatic-batteries.html
@@ -135,7 +135,7 @@
 
 <li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
@@ -143,17 +143,20 @@
 <li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
+<li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
+<li class="nav-item mr-0"><a href="#" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 
 
-
+<li class="nav-item mr-0"><a href="#" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
+</a></li>
 <li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
 <li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
@@ -177,7 +180,7 @@
 </li>
 <li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
@@ -246,7 +249,7 @@
 <li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
-<a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
+<a href="for-cylindrical-batteries.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
 <li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
@@ -256,17 +259,19 @@
 </li>
 <!-- Two -->
 <li>
-<a href="for-prismatic-batteries.html" title="For Prismatic Batteries">For Prismatic Batteries</a>
+<a href="for-prismatic-batteries.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Line">Turnkey Assembly Line</a></li>
+<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
+<li><a href="#" title="Laser Welding Machines">Laser Welding Machines</a></li>
 <li><a href="#" title="Cell Testers">Cell Testers</a></li>
+<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
-<li><a href="#" title="Welding Machines">Welding Machines</a></li>
 </ul>
 </li>
 
 <!-- Three -->
-
+<li><a href="#" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="#" title="Other Machines">Other Machines</a></li>
 
@@ -297,7 +302,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">FOR PRISMATIC BATTERIES</h1>
+<h1 class="title text-white">Prismatic Batteries Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -307,7 +312,7 @@
 <a title="Homepage" href="lithium-batteries.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">For Prismatic Batteries</span>
+<span class="text-white">Prismatic Batteries Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -321,7 +326,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Semi Auto Lines for Prismatic Batteries in India"><img src="img/prismatic-assembley-line.png" class="card-img-top product-img" alt="Semi Auto Lines for Prismatic Batteries in India" title="Semi Auto Lines for Prismatic Batteries in India"></a>
+        <a href="#" title="Semi Auto Lines Prismatic Batteries Lines in India"><img src="img/prismatic-assembley-line.png" class="card-img-top product-img" alt="Semi Auto Lines Prismatic Batteries Lines in India" title="Semi Auto Lines Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Semi Auto Lines</h5>
@@ -338,7 +343,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Automatic Lines for Prismatic Batteries in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Automatic Lines for Prismatic Batteries in India" title="Automatic Lines for Prismatic Batteries in India"></a>
+        <a href="#" title="Automatic Lines Prismatic Batteries Lines in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Automatic Lines Prismatic Batteries Lines in India" title="Automatic Lines Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Automatic Lines</h5>
@@ -355,7 +360,7 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-       <a href="#" title="Welding Machines for Prismatic Batteries in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines for Prismatic Batteries in India" title="Welding Machines for Prismatic Batteries in India"></a> 
+       <a href="#" title="Welding Machines Prismatic Batteries Lines in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines Prismatic Batteries Lines in India" title="Welding Machines Prismatic Batteries Lines in India"></a> 
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laser Welding Machines</h5>
@@ -375,7 +380,7 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Cell Testers for Prismatic Batteries in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers for Prismatic Batteries in India" title="Cell Testers for Prismatic Batteries in India"></a>
+        <a href="#" title="Cell Testers Prismatic Batteries Lines in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers Prismatic Batteries Lines in India" title="Cell Testers Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
@@ -390,7 +395,7 @@
     </div>
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Battery Pack Testers for Prismatic Batteries in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers for Prismatic Batteries in India" title="Battery Pack Testers for Prismatic Batteries in India"></a>
+        <a href="#" title="Battery Pack Testers Prismatic Batteries Lines in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers Prismatic Batteries Lines in India" title="Battery Pack Testers Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Pack Testers</h5>
@@ -406,11 +411,11 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Sorting Machine for Prismatic Batteries in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine for Prismatic Batteries in India" title="Sorting Machine for Prismatic Batteries in India"></a>
+        <a href="#" title="Sorting Machine Prismatic Batteries Lines in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine Prismatic Batteries Lines in India" title="Sorting Machine Prismatic Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
-            <p class="card-text text-muted">Efficient Sorting Machines designed for prismatic batteries to accurately classify cells based on voltage, capacity, and quality. Streamlines battery production with fast and precise sorting for improved pack performance.</p>
+            <p class="card-text text-muted">Efficient Sorting Machines designed Prismatic Batteries Lines to accurately classify cells based on voltage, capacity, and quality. Streamlines battery production with fast and precise sorting for improved pack performance.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
